# feedcopilot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: tests.yml
docs/: agent-integration.md  cli-spec.md  codex-development-plan.md  config-spec.md  database-schema.md  product-requirements.md  technical-design.md  tui-design.md
examples/: config.toml  feeds.opml  hermes-integration.md  openclaw-skill.md
feedcopilot/ai/: external_command.py
feedcopilot/cli/: app.py
feedcopilot/core/: backup.py  config.py  i18n.py
feedcopilot/db/: models.py  repository.py  session.py
feedcopilot/exporters/: json_export.py  markdown.py  opml.py
feedcopilot/i18n/: en.toml  zh.toml
feedcopilot/rss/: fetcher.py
feedcopilot/scheduler/: manager.py
feedcopilot/tui/: app.py
tests/: test_cli_commands.py  test_config.py  test_db.py  test_exporters.py  test_fetcher.py  test_import.py  test_runtime_helpers.py  test_tui.py
